<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    android:background="@color/backgroundApp"
    tools:context=".MainActivity">


    <LinearLayout
        style="@style/LinearLayoutVerticalStyle">

        <LinearLayout
            style="@style/StatusLayoutStyle">

            <TextView
                style="@style/StatusTextViewStyle" />

            <ImageView
                style="@style/StatusImageViewStyle"
                android:src="@drawable/ic_senal"/>

            <ImageView
                style="@style/StatusImageViewStyle"
                android:src="@drawable/ic_wifi"/>

            <ImageView
                style="@style/StatusImageViewStyle"
                android:src="@drawable/ic_bateria"/>

        </LinearLayout>

        <!-- Seção de perfil e cabeçalho -->
        <LinearLayout
            style="@style/CabecalhoLayoutStyle">

            <ImageView
                style="@style/CabecalhoImageViewStyle"
                android:src="@drawable/image_converted" />

            <TextView
                style="@style/CabecalhoTextViewStyle"
                android:textColor="@color/black"
                android:text="@string/nome_de_usuário" />

            <ImageView
                style="@style/CabeclahoImageViewAdditionalStyle"
                android:src="@drawable/ic_olho" />

            <ImageView
                style="@style/CabecalhoUltimoImageViewStyle"
                android:src="@drawable/ic_ajuda" />
        </LinearLayout>

        <!-- Saldo Atual -->
        <LinearLayout
            style="@style/SaldoAtualLayoutStyle">

            <TextView
               style="@style/SaldoAtualLabelStyle"
                android:textColor="@color/gris_texto"
                android:text="@string/nome_saldo" />

            <TextView
                style="@style/SaldoAtualTextViewStyle"
                android:text="@string/reales"
                android:textColor="@color/azul_select"
                app:drawableEndCompat="@drawable/ic_seta" />

        </LinearLayout>

        <!-- Opciones de acción -->
        <GridLayout
            style="@style/ActionOptionsGridLayoutStyle">

            <androidx.cardview.widget.CardView
                style="@style/ActionOptionCardViewStyle"
                app:cardBackgroundColor="@color/car_background">

                <LinearLayout
                    style="@style/ActionOptionLinearLayoutStyle">

                    <ImageView
                        style="@style/ActionOptionImageViewStyle"
                        android:src="@drawable/ic_pix" />

                    <TextView
                        style="@style/ActionOptionTextViewStyle"
                        android:textColor="@color/gris_texto"
                        android:text="@string/card_pix" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ActionOptionCardViewStyle"
                app:cardBackgroundColor="@color/car_background">

                <LinearLayout
                    style="@style/ActionOptionLinearLayoutStyle">

                    <ImageView
                        style="@style/ActionOptionImageViewStyle"
                        android:src="@drawable/ic_pay" />

                    <TextView
                        style="@style/ActionOptionTextViewStyle"
                        android:textColor="@color/gris_texto"
                        android:text="@string/card_pagamentos"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ActionOptionCardViewStyle"
                app:cardBackgroundColor="@color/car_background">

                <LinearLayout
                    style="@style/ActionOptionLinearLayoutStyle">

                    <ImageView
                        style="@style/ActionOptionImageViewStyle"
                        android:src="@drawable/ic_shopping" />

                    <TextView
                        style="@style/ActionOptionTextViewStyle"
                        android:textColor="@color/gris_texto"
                        android:text="@string/card_shopping" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ActionOptionCardViewStyle"
                app:cardBackgroundColor="@color/azul_select">

                <LinearLayout
                    style="@style/ActionOptionLinearLayoutStyle">

                    <ImageView
                        style="@style/ActionOptionImageViewStyle"
                        android:src="@drawable/ic_donacao" />

                    <TextView
                        style="@style/ActionOptionTextViewStyle"
                        android:text="@string/card_emprestimos"
                        android:textColor="@color/gray_light" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <!-- Información adicional -->
        <androidx.cardview.widget.CardView
            style="@style/SaudeInfoCardViewStyle"
            app:cardBackgroundColor="@color/saude_background">

            <LinearLayout
                style="@style/SaudeInfoLinearLayoutStyle">

                <LinearLayout
                    style="@style/SaudeInfoInternoLinearLayoutStyle">

                    <TextView
                        style="@style/SaudeInfoTextViewStyle"
                        android:text="@string/card_saude_text_1"
                        android:textColor="@color/gray_light" />

                    <TextView
                        style="@style/SaudeInfoTextViewStyle"
                        android:text="@string/card_saude_text_2"
                        android:textColor="@color/gray_light" />

                    <TextView
                        style="@style/SaudeInfoTextViewStyle"
                        android:text="@string/card_saude_text_3"
                        android:textColor="@color/gray_light" />
                </LinearLayout>

                <ImageView
                    style="@style/SaudeInfoImageViewStyle"
                    android:src="@drawable/sau" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/pontos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_remove" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pontos" />
        </LinearLayout>

        <!-- Tarjetas y préstamos -->
        <LinearLayout
            style="@style/CardYLinearCardViewStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCartao"
                style="@style/CardYLinearCardViewStyle"
                app:cardBackgroundColor="@color/azul_select">

                <LinearLayout
                    style="@style/CardYLienearInternoLinearLayoutStyle">

                    <TextView
                        style="@style/CardYLinearTextViewStyle"
                        android:text="@string/card_cartao_text_1"
                        android:textColor="@color/gray_light" />

                    <TextView
                        style="@style/CardYLinearTextViewStyle"
                        android:layout_marginTop="16dp"
                        android:text="@string/card_cartao_text_2"
                        android:textColor="@color/gray_light" />

                    <TextView
                        style="@style/CardYLinearTextViewStyle"
                        android:text="@string/card_cartao_text_3"
                        android:textColor="@color/gray_light" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardYLinearCardViewStyle"
                android:id="@+id/gridEm"
                app:cardBackgroundColor="@color/car_background">

                <LinearLayout
                    style="@style/CardYLienearInternoLinearLayoutStyle">

                    <TextView
                        style="@style/CardYLinearTextViewStyle"
                        android:text="@string/card_emprestimos_text_1"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/CardYLinearTextViewStyle"
                        android:layout_marginTop="16dp"
                        android:text="@string/card_emprestimos_text_2"
                        android:textColor="@color/gris_texto" />

                    <TextView
                        style="@style/CardYLinearTextViewStyle"
                        android:text="@string/card_emprestimos_text_3"
                        android:textColor="@color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        </LinearLayout>
</ScrollView>
